--- a/src/scss/components/_content.scss
+++ b/src/scss/components/_content.scss
@@ -21,6 +21,10 @@
     	color: $color-white;
     }
 
+    &__area--white {
+    	background-color: $color-white;
+    }
+
     &__featured {
     	display: block;
     	font-family: $font-druk-wide;
