--- a/src/scss/template-parts/_about.scss
+++ b/src/scss/template-parts/_about.scss
@@ -204,6 +204,7 @@
 		}
 
 		.card-item {
+
 			@include media('>phone') {
 				width: 45%;
 			}
@@ -221,8 +222,24 @@
 				margin-bottom: rem-calc(84);
 			}
 
+			&:nth-child(2){
+				margin-top: unset;
+				@include media('>desktop-small') {
+					margin-top: 32%;
+				}
+			}
+			&:nth-child(3){
+				margin-top: unset;
+				@include media('>desktop-small') {
+					margin-top: -32%;
+				}
+			}
 			&:last-child {
 				margin-bottom: 0;
+				margin-top: unset;
+				@include media('>desktop-small') {
+					margin-top: -17%;
+				}
 			}
 		}
 	}
