--- a/src/scss/template-parts/_hero.scss
+++ b/src/scss/template-parts/_hero.scss
@@ -170,7 +170,7 @@
 
 			&::before {
 				top: 6%;
-				left: -13%;
+				left: -7%;
 				width: 26%;
 				height: 27%;
 
@@ -179,6 +179,24 @@
 					left: -11%;
 					width: 26%;
 					height: 35.5%;
+				}
+				@include media('>desktop-small') {
+					left: -13%;
+				}
+			}
+
+			&::after {
+
+				top: 69%;
+				left: 59%;
+				width: 51%;
+				height: 36%;
+
+				@include media('>desktop-small') {
+					top: 81.5%;
+					left: -11%;
+					width: 99%;
+					height: 25.5%;
 				}
 			}
 		}
@@ -195,17 +213,35 @@
 
 			&::before {
 				@extend %image__color-burn--left;
-
 				z-index: 3;
+			}
+			@include media('>desktop-small') {
+				&::before {
+					right: 0;
+					left: unset;
+				}
 			}
 		}
 
 		&-top,
 		&-bottom {
 			@include ratio(179, 179);
+			position: absolute;
+			margin: auto;
+			width: 100%;
+			z-index: 3;
 		}
 
 		&-top {
+			max-width: 30%;
+			right: 1%;
+			top: 15%;
+
+			@include media('>desktop-small') {
+				right: -4%;
+				top: 11%;
+			}
+
 			&::before {
 				@extend %dots-pattern;
 
@@ -221,6 +257,17 @@
 				}
 			}
 		}
+
+		&-bottom {
+			max-width: 31%;
+			top: 60%;
+			left: -5%;
+
+			@include media('>desktop-small') {
+				left: -4%;
+				top: 56.5%;
+			}
+		}
 	}
 
 	&__image {
@@ -231,9 +278,11 @@
 
 	&-header {
 		margin-bottom: rem-calc(18);
+		max-width: 65%;
 
 		@include media('>tablet') {
 			margin-bottom: rem-calc(20);
+			max-width: unset;
 		}
 
 		@include media('>desktop-small') {
